--- a/src/main/resources/com/example/vehiculosjavafx/rents_view.fxml
+++ b/src/main/resources/com/example/vehiculosjavafx/rents_view.fxml
@@ -7,22 +7,37 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-max-width: 1000;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.vehiculosjavafx.RentsViewController">
    <children>
-      <HBox prefHeight="100.0" prefWidth="200.0" />
-      <TableView prefHeight="200.0" prefWidth="200.0">
-        <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
-        </columns>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-max-width: 1000;">
+         <children>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label text="Fecha inicial" />
+                  <DatePicker fx:id="startDate" onAction="#startDateChanged" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label text="Cliente" />
+                  <ComboBox fx:id="customerSelector" onAction="#customerSelectorChanged" prefWidth="150.0" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label text="Fecha final" />
+                  <DatePicker fx:id="endDate" onAction="#endDateChanged" />
+               </children>
+            </VBox>
+         </children></HBox>
+      <TableView fx:id="rentTable" prefHeight="200.0" prefWidth="200.0" style="-fx-max-width: 1000;">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <VBox alignment="CENTER" prefHeight="41.0" prefWidth="580.0" VBox.vgrow="ALWAYS">
+      <VBox alignment="CENTER" prefHeight="41.0" prefWidth="580.0" style="-fx-max-width: 1000; -fx-max-height: 100;" VBox.vgrow="ALWAYS">
          <children>
-            <Button mnemonicParsing="false" text="Alquilar vehículo" />
+            <Button fx:id="newRentButton" mnemonicParsing="false" onAction="#newRentClick" text="Alquilar vehículo" />
          </children>
       </VBox>
    </children>
