--- a/src/main/resources/com/example/vehiculosjavafx/rents_view.fxml
+++ b/src/main/resources/com/example/vehiculosjavafx/rents_view.fxml
@@ -14,30 +14,34 @@
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                <children>
                   <Label text="Fecha inicial" />
-                  <DatePicker fx:id="startDate" onAction="#startDateChanged" />
+                  <DatePicker fx:id="startDate" onAction="#startDateChanged" styleClass="form-control" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                <children>
                   <Label text="Cliente" />
-                  <ComboBox fx:id="customerSelector" onAction="#customerSelectorChanged" prefWidth="150.0" />
+                  <ComboBox fx:id="customerSelector" onAction="#customerSelectorChanged" prefWidth="150.0" styleClass="form-control" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                <children>
                   <Label text="Fecha final" />
-                  <DatePicker fx:id="endDate" onAction="#endDateChanged" />
+                  <DatePicker fx:id="endDate" onAction="#endDateChanged" styleClass="form-control" />
                </children>
             </VBox>
          </children></HBox>
-      <TableView fx:id="rentTable" prefHeight="200.0" prefWidth="200.0" style="-fx-max-width: 1000;">
+      <TableView fx:id="rentTable" prefHeight="200.0" prefWidth="200.0" style="-fx-max-width: 1000;" styleClass="table table-hover">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
       <VBox alignment="CENTER" prefHeight="41.0" prefWidth="580.0" style="-fx-max-width: 1000; -fx-max-height: 100;" VBox.vgrow="ALWAYS">
          <children>
-            <Button fx:id="newRentButton" mnemonicParsing="false" onAction="#newRentClick" text="Alquilar vehículo" />
+            <Button fx:id="newRentButton" mnemonicParsing="false" onAction="#newRentClick" text="Alquilar vehículo">
+               <styleClass>
+                  <String fx:value="btn" />
+                  <String fx:value="btn-primary" />
+               </styleClass></Button>
          </children>
       </VBox>
    </children>
