💄 Added classes to buttons

--- a/src/main/resources/com/example/vehiculosjavafx/add_vehicle.fxml
+++ b/src/main/resources/com/example/vehiculosjavafx/add_vehicle.fxml
@@ -132,7 +132,11 @@
             <Button mnemonicParsing="false" onAction="#doRent" text="Rentar vehículo" HBox.hgrow="ALWAYS">
                <font>
                   <Font size="18.0" />
-               </font></Button>
+               </font>
+               <styleClass>
+                  <String fx:value="button" />
+                  <String fx:value="primary" />
+               </styleClass></Button>
          </children>
       </HBox>
    </children>
